# agent-hivemind

./: .env.example  .gitignore  .mcp.json  =0.4.22  =1.13.0  =3.9.1  AUDIT_REVIEW.md  BROWSER_TESTING_HANDOFF.md  CHANGELOG.md  CLAUDE.md  CLAUDE.minimal.md  CODE_REVIEW.md  COMET_OPTIMIZATION_PLAN.md  CONFIDENCE_SYSTEM_SUMMARY.md  CONFLUENCE_INTEGRATION.md  DASHBOARD_CREDENTIALS.md  DASHBOARD_PORT_MIGRATION.md  Dockerfile.vault  LICENSE  MANIFEST.in  MCP_INTEGRATION.md  MERGE_SUMMARY_STORY_7C.md  QUICK_START.md  README.md  README_MCP_HOSTING.md  REMOTE_SETUP.md  RULES_DASHBOARD_IMPLEMENTATION.md  RULES_ENGINE_DESIGN.md  STARTUP_GUIDE.md  STORY_3B_IMPLEMENTATION_SUMMARY.md  STORY_3C_IMPLEMENTATION_SUMMARY.md  STORY_4A_IMPLEMENTATION_SUMMARY.md  STORY_4B_IMPLEMENTATION_SUMMARY.md  STORY_4C_IMPLEMENTATION_SUMMARY.md  STORY_5A_IMPLEMENTATION_SUMMARY.md  STORY_5B_IMPLEMENTATION_SUMMARY.md  STORY_5C_IMPLEMENTATION_SUMMARY.md  STORY_6D_IMPLEMENTATION_SUMMARY.md  STORY_6E_IMPLEMENTATION_SUMMARY.md  STORY_7A_COMPLETION_SUMMARY.md  (+40 more)
.claude/: settings.local.json
.cursor/: mcp.json  mcp.json.backup  vibe-kanban-mcp.json
INSTALL/: README.md  conversation-examples.md  local-mcp.json  remote-mcp.json  sample-conversation.txt  setup-remote.sh  sync-commands.sh
admin/: agent-kanban.html  agents.html  client_configs.html  config-backup.html  config.html  dashboard.html  devices.html  documentation_viewer.html  help.html  keys.html  login.html  marketplace.html  mcp_bridge.html  mcp_servers.html  memory.html  prompts.html  users.html  vault-access.html  vault-settings.html  vault.html  websocket_test.html
commands/: examples.md  help.md  hivesink-pull.md  hv-broadcast.md  hv-create-ticket.md  hv-delegate.md  hv-install.md  hv-list-tickets.md  hv-my-tickets.md  hv-search-tickets.md  hv-status.md  hv-sync-commands.md  hv-sync.md  hv-ticket-metrics.md  hv-ticket.md  recall.md  recent.md  suggest.md  ticket-list.md
config/: bridge_config.json  config.json  enterprise_vault_config.json  marketplace_config.json  vault_config.json  vault_database_schema.sql
database/: haivemind.db
docker/: vault-entrypoint.sh
docs/: HAIVEMIND_COMMAND_EXAMPLES.md  HAIVEMIND_MCP_SUCCESS.md  MCP_AUTHENTICATION_GUIDE.md  MCP_REGISTRY_ARCHITECTURE.md  RULES_DATABASE_SYSTEM.md  TOKEN_OPTIMIZATION_STRATEGY.md  VAULT_ARCHITECTURE_DESIGN.md  VAULT_DEPLOYMENT_GUIDE.md  audit-log-security.md  mcp-session-fix-solution.md  remote-mcp.md  session-troubleshooting.md  websocket_authentication_fix.md
examples/: advanced_playbook_example.yaml  cheatsheet.txt  upload_example_server.json
mcp-client/: QUICK_START.md  install.sh  requirements.txt
scripts/: create_example_server_package.py  generate_jwt.py  get_admin_creds.py  initialize_rules_system.py  quick_start_haivemind.py  reset_admin_password.py  setup_mcp_auth.py  simple_memory_store.py  store_haivemind_success.py  store_memory_script.py  test_websocket_auth.py
services/: install-services.sh  mcp-aggregator.service  mcp-hosting.service  (+3 more)
src/: access_control.py  (+109 more)
(+132 files in other folders)
